# storyforge

./: .directory  .env  .env.example  .gitignore  .itch.toml  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  STORYFORGE_CODEX.md  StoryForge.spec  buildozer.spec  extract.py  fix_seed.py  frontend_verification_test.py  godot_asset_installer.py  launch.sh  main.py  nfpm.yaml  pyproject.toml  start_server.py  storyforge.iss  storyforge.spec  test_app.html  update_menu.sh
.Jules/: palette.md
.gemini/agents/: beast-creator.md  rules-mechanic.md  visual-director.md
.github/workflows/: build-android.yml  build-desktop.yml  build.yml  package-linux.yml  release.yml  windows-build.yml
.jules/: bolt.md  palette.md  sentinel.md
Profiles/: binkbink.html  bryne.html  coco.html  cole.html  cyrus.html  danna.html  haylie.html  jon.html  keeva.html  kodrik_profile.html  mykael.html  nathis.html  snowie.html  storyforge_lorebook.html  teddy.html  tyty.html  yeldarb.html
current_backup/: main.py
data/seeds/: default_campaign.json
docs/: LOREBOOK_BEASTS.md  New_SetUp.md  StoryForge-Claude.md  WINDOWS_SETUP.md  WORLD_BIBLE.md
docs/plans/: 2025-05-24-3d-race-miniatures.md  2026-05-19-feral-successors-design.md  2026-05-22-godot-2.5d-overhaul.md  2026-05-25-majoras-mask-expansion.md
frontend/: index.html
frontend/css/: cinematic.css  flames.css  ink-effects.css  lobby.css  styles.css
godot/: export_presets.cfg  icon.svg.import  project.godot
scripts/: build.py  build_windows.py  dev.fish  generate_audio.py  generate_portraits.py  generate_schema.py  launch.sh  migrate_lobby.fish  package_release.py
standalone/: README.md  bootstrap.fish  build.bat  extract.py  pyproject.toml
tests/: conftest.py  test_character_factory.py  test_routes_lobby.py  test_routes_npc.py  test_validators.py
(+213 files in other folders)
