[project]
name = "storyforge"
version = "0.1.0"
description = "Hybrid VTT + AI Dungeon Master for family D&D 5e"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=0.3",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "pyinstaller>=6.20.0",
    "pywebview>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyforge"]
