[project]
name = "storyforge"
version = "0.2.0"
description = "Hybrid VTT + AI Dungeon Master for family D&D 5e"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=0.3",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "pywebview>=5.1",
    "qtpy>=2.4.3",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "PyJWT[crypto]>=2.8",
    "google-auth-oauthlib>=1.4.0",
    "google-api-python-client>=2.196.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "pyinstaller>=6.10",
    "pillow>=10.0",
    "numpy>=2.4.6",
]

[project.scripts]
storyforge = "storyforge.gui:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
